@@ -1,6 +1,9 @@
 1.69
 -----------------
 Run the alarms mechanism on the errors from Verify [LONE-117@JIRA], [GDQMQ-250@JIRA]
+Use reference histograms when doing alarms [LONE-118@JIRA]
+Increase scratch reservation when doing large merges s.t. only 1 should run on
+a host at once.
 -------------------------------------------
 
 
